--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "write-yaml-file": "4.0.0"
   },
   "devDependencies": {
+    "expect": "^26.6.2",
     "jest": "24.8.0",
     "jest-cli": "24.8.0",
     "jest-html-reporter": "3.1.3",
