--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "format": "exit 0",
     "keg": "./keg",
     "init:bash": "/bin/bash ./scripts/setup/mac-init.sh",
-    "test": "NODE_ENV=test jest --no-cache  --verbose",
+    "test": "yarn test:jest",
+    "test:jest": "NODE_ENV=test jest --no-cache  --verbose",
+    "test:e2e": "NODE_ENV=test node ./scripts/cli/tests/index.js",
     "test:reports": "yarn test --coverage && yarn view:reports",
     "update:cli": "bash ./scripts/cli/updates/1.2.0.sh",
     "view:reports": "open reports/coverage/lcov-report/index.html"
