fix: package run task   * Fix issue with getting the proxy labels   * Added helper for finding the proxy port   * Updated inspectContext to parse image ports   * Updated buildLabels to be wrapped in quotes   * Added KEG_PROXY_PORT env to componetns and core Dockerfiles

--- a/containers/components/Dockerfile
+++ b/containers/components/Dockerfile
@@ -39,6 +39,9 @@ ENV DOC_APP_PATH=$DOC_APP_PATH
 # Set the current directory to keg-core repo
 WORKDIR $DOC_APP_PATH
 
+ARG KEG_PROXY_PORT=60710
+EXPOSE $KEG_PROXY_PORT
+
 # Copy keg-components repo from the keg-base image
 COPY --from=keg-base /keg-hub/repos/keg-components $DOC_APP_PATH
 
