--- a/scripts/setup/cli.config.json
+++ b/scripts/setup/cli.config.json
@@ -28,7 +28,8 @@
         "buildKit": true,
         "force": true,
         "defaultLocalBuild": true,
-        "imagePullPolicy": "Always"
+        "imagePullPolicy": "Always",
+        "defaultTag": "master"
       },
       "checkUpdates": false,
       "editorCmd": "code",
