feat(components): Migrate Keg-Components to linked tap

--- a/containers/base/defaults.env
+++ b/containers/base/defaults.env
@@ -11,7 +11,7 @@ KEG_PATH={{ cli.paths.keg }}
 CLI_PATH={{ cli.paths.cli }}
 CORE_PATH={{ cli.paths.core }}
 CONTAINERS_PATH={{ cli.paths.containers }}
-COMPONENTS_PATH={{ cli.paths.components }}
+COMPONENTS_PATH={{ cli.taps.components.path }}
 KEG_CONFIG_PATH={{ cli.paths.kegConfig }}
 RESOLVER_PATH={{ cli.paths.resolver }}
 JSUTILS_PATH={{ cli.paths.jsutils }}
