--- a/containers/base/cli.config.json
+++ b/containers/base/cli.config.json
@@ -28,7 +28,6 @@
       "kegConfig": "/root/.kegConfig",
       "containers": "/keg-hub/repos/keg-cli/containers",
       "cli": "/keg-hub/repos/keg-cli",
-      "components": "/keg-hub/repos/keg-components",
       "core": "/keg-hub/repos/keg-core",
       "external": "/keg-hub/external",
       "hub": "/keg-hub",
@@ -58,8 +57,11 @@
       }
     },
     "taps": {
-      "links": {
-        "retheme": "/keg-hub/repos/re-theme"
+      "retheme": {
+        "path": "/keg-hub/repos/re-theme"
+      },
+      "components": {
+        "path": "/keg-hub/repos/keg-components"
       }
     }
   },
