--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "view:reports": "open reports/coverage/lcov-report/index.html"
   },
   "dependencies": {
-    "@keg-hub/args-parse": "6.2.1",
+    "@keg-hub/args-parse": "6.2.2",
     "@keg-hub/ask-it": "0.0.1",
     "@keg-hub/jsutils": "8.0.0",
     "@keg-hub/spawn-cmd": "0.1.0",
@@ -57,9 +57,9 @@
     "write-yaml-file": "4.0.0"
   },
   "devDependencies": {
-    "expect": "^26.6.2",
-    "jest": "24.8.0",
-    "jest-cli": "24.8.0",
+    "expect": "26.6.2",
+    "jest": "26.6.3",
+    "jest-cli": "26.6.3",
     "jest-html-reporter": "3.1.3",
     "jest-sonar-reporter": "2.0.0"
   },
