--- a/containers/base/docker-compose.yml
+++ b/containers/base/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: ${KEG_DOCKER_FILE}
       args:
         - EXPO_CLI_VERSION
+        - SHARP_CLI_VERSION
         - GIT_CLI_URL
         - GIT_CLI_BRANCH
         - GIT_HUB_URL
