--- a/scripts/ci/ci.env
+++ b/scripts/ci/ci.env
@@ -16,7 +16,13 @@ KEG_CONFIG_PATH={{ cli.paths.kegConfig }}
 # --- EXPO CONTEXT ENVs --- #
 
 # Cli
+# Version of the expo CLI installed into the keg-base:master image
 EXPO_CLI_VERSION=4.3.0
+# dependency for expo-cli
+SHARP_CLI_VERSION=1.10.0
+
+# Name of the image used in the FROM directive of the Dockerfile
+KEG_NODE_VERSION=14.16.0-alpine
 
 # Container Ports
 EXPO_DEBUG_PORT=19002
@@ -38,9 +44,6 @@ GIT_HUB_BRANCH=develop
 KEG_BASE_IMAGE=ghcr.io/simpleviewinc/keg-base:{{ cli.settings.docker.defaultTag }}
 KEG_IMAGE_FROM=ghcr.io/simpleviewinc/keg-base:{{ cli.settings.docker.defaultTag }}
 KEG_IMAGE_TAG={{ cli.settings.docker.defaultTag }}
-
-# Name of the image used in the FROM directive of the Dockerfile
-KEG_NODE_VERSION=14.16.0-alpine
 
 # Entry point to the keg-proxy for all services
 # Allows the proxy to automatically route all traffic coming into port 80/443
