Update expo and node (#44)
[Semver-Status] minor

**Depenencies**
  * Update expo-cli to 4.3.0
  * Added env for sharp-cli version
  * Addded sharp-cli to base image
  * Update versions
  * Updated .lock file
* **Tasks**
  * Added filter to dependencies
  * Fixed build and push tasks
    * Updated to use from option when building an image
  * Small fix to run cmd
* **Docker**
  * Cleaned up docker file
  * Allowed overriting the KEG_BASE_FROM env when building
  * Fixed run scripts for core and components
  * Added docker mocks for some tests
* **Libs**
  * Added pipe method to yarn script
    * Allows piping the output, and displaying a loader
    * Cleans up the outuput
    * Fixed sync option to work properly
    * Added listener to SIGINT
      * Exit process completly when ever ctrl+c is pressed

--- a/containers/base/Dockerfile
+++ b/containers/base/Dockerfile
@@ -5,8 +5,9 @@ FROM $KEG_NODE_IMAGE as keg-builder
 WORKDIR /
 
 # Add git so we can pull down keg-repos
-RUN apk --no-cache add git; \
-    yarn global add expo-cli@$EXPO_CLI_VERSION nodemon --pure-lockfile
+# RUN apk --no-cache --virtual add git python .gyp python make g++
+RUN apk add --no-cache git python make g++; \
+    yarn global add expo-cli@$EXPO_CLI_VERSION sharp-cli@$SHARP_CLI_VERSION nodemon --pure-lockfile
 
 # ---- Setup keg-hub within the container ---- #
 
