--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "keg-cli",
-  "version": "3.1.3",
+  "version": "3.2.0",
   "description": "Node.js CLI for working with Keg Repos and Taps",
   "main": "./keg",
   "repository": "https://github.com/lancetipton/Keg-CLI",
@@ -26,6 +26,7 @@
     "clean:full": "yarn clean && yarn install",
     "clean": "yarn clean:lock && yarn cache clean && rimraf node_modules && npm cache clean --force",
     "clean:lock": "rimraf ./yarn.lock && rimraf ./package.lock",
+    "doc:publish": "cd ./scripts/ci/ && bash buildPushDockerImages.sh",
     "format": "exit 0",
     "keg": "./keg",
     "init:bash": "/bin/bash ./scripts/setup/mac-init.sh",
@@ -33,25 +34,24 @@
     "test:jest": "NODE_ENV=test jest --no-cache  --verbose",
     "test:e2e": "NODE_ENV=test node ./scripts/cli/tests/index.js",
     "test:reports": "yarn test --coverage && yarn view:reports",
-    "update:cli": "bash ./scripts/cli/updates/1.2.0.sh",
     "view:reports": "open reports/coverage/lcov-report/index.html"
   },
   "dependencies": {
-    "@keg-hub/args-parse": "6.2.2",
-    "@keg-hub/ask-it": "0.0.1",
-    "@keg-hub/jsutils": "8.0.0",
-    "@keg-hub/spawn-cmd": "0.1.0",
+    "@keg-hub/args-parse": "6.2.3",
+    "@keg-hub/ask-it": "0.0.2",
+    "@keg-hub/jsutils": "8.4.0",
+    "@keg-hub/spawn-cmd": "0.1.2",
     "axios": "0.21.1",
     "cli-progress": "3.8.2",
     "cli-spinners": "2.3.0",
     "colors": "1.4.0",
-    "fs-extra": "9.0.1",
+    "fs-extra": "9.1.0",
     "js-yaml": "3.14.0",
     "log-update": "4.0.0",
     "module-alias": "2.2.2",
     "ngrok": "3.2.7",
     "qrcode-terminal": "0.12.0",
-    "rimraf": "2.6.3",
+    "rimraf": "3.0.2",
     "semver": "^7.3.2",
     "shelljs": "^0.8.4",
     "write-yaml-file": "4.0.0"
