--- a/containers/core/mutagen.yml
+++ b/containers/core/mutagen.yml
@@ -9,7 +9,7 @@ sync:
         - "node_modules"
         # Ths js import files are dynamically generated
         # So we don't include them in the sync
-        - "/core/base/assets/*.js"
+        - "/core/base/assets/**/index.js"
         - "/.*"
         - "!/.storybook"
         - "!/.npmrc"
