--- a/containers/tap/mutagen.yml
+++ b/containers/tap/mutagen.yml
@@ -7,7 +7,9 @@ sync:
       vcs: true
       paths:
         - "node_modules"
-        - "/core/base/assets/*"
+        # The js import files are dynamically generated
+        # So we don't include them in the sync
+        - "/core/base/assets/**/index.js"
         - "/.*"
         - "!/.storybook"
         - "!/.npmrc"
