--- a/containers/proxy/docker-compose.yml
+++ b/containers/proxy/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       # We may want to switch to this to allow dynamically exposing containers based on environment
       - --providers.docker.exposedbydefault=${PROXY_EXPOSED:-true}
       - --entrypoints.${KEG_PROXY_ENTRY}.address=:${PROXY_ENTRY_PORT:-80}
+      - --ping
     labels:
       # These labels will route traffic at the root host to the traefik dashboard
       # All other docker containers use a sub-domain
@@ -29,6 +30,7 @@ services:
       - ${PROXY_INSECURE_PORT}:${PROXY_INSECURE_PORT:-80}
       - ${PROXY_SECURE_PORT}:${PROXY_SECURE_PORT:-443}
       - ${PROXY_DASHBOARD_PORT}:${PROXY_DASHBOARD_PORT:-18001}
+      - ${PROXY_HEALTHCHECK_PORT}:${PROXY_HEALTHCHECK_PORT:-8080}
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
 networks:
