--- a/containers/proxy/values.yml
+++ b/containers/proxy/values.yml
@@ -23,6 +23,7 @@ env:
   PROXY_INSECURE_PORT: 80
   PROXY_SECURE_PORT: 443
   PROXY_DASHBOARD_PORT: 18001
+  PROXY_HEALTHCHECK_PORT: 8080
 
   # Defualt proxy settings
   PROXY_INSECURE: true
