--- a/containers/proxy/values.yml
+++ b/containers/proxy/values.yml
@@ -1,6 +1,7 @@
 
 env:
   # --- LOCAL ENV CONTEXT --- #
+  IMAGE: 'keg-proxy'
 
   KEG_DOCKER_FILE: "{{ cli.paths.containers }}/proxy/Dockerfile"
   KEG_VALUES_FILE: "{{ cli.paths.containers }}/proxy/values.yml"
@@ -32,3 +33,6 @@ env:
 
   # Entry port for trafik to route to keg containers
   PROXY_ENTRY_PORT: 80
+
+  # Ensures watchtower won't restart the container when a new image is found (default is true)
+  KEG_WATCHTOWER_ENABLED: false
