ensured keg_proxy_host consistency across environments

--- a/containers/base/cli.config.json
+++ b/containers/base/cli.config.json
@@ -40,6 +40,7 @@
     },
     "settings": {
       "defaultEnv": "development",
+      "defaultDomain": "keghub.io",
       "docker": {
         "preConfirm": false,
         "buildKit": true,
