--- a/containers/base/defaults.env
+++ b/containers/base/defaults.env
@@ -45,7 +45,7 @@ KEG_IMAGE_TAG={{ cli.settings.docker.defaultTag }}
 KEG_PROXY_ENTRY=keg
 
 # Default domain to be used for routing traffic
-KEG_PROXY_HOST=local.kegdev.xyz
+KEG_PROXY_HOST={{ cli.settings.defaultEnv }}.{{ cli.settings.defaultDomain }}
 
 # Internal Docker Network for all container s to connect to
 KEG_DOCKER_NETWORK=keg-hub-net
