feat(tasks): Docker Package task   * Cleaned up package task   * Moved methods to package utils   * Added more notes   * Fixed issues with cli tests   * Added tests for package utils methods   * Started util for building an app bundle

--- a/package.json
+++ b/package.json
@@ -111,6 +111,9 @@
       "^KegTasks(.*)$": "<rootDir>/src/tasks$1",
       "^KegUtils(.*)$": "<rootDir>/src/utils$1"
     },
+    "modulePathIgnorePatterns": [
+      "<rootDir>/repos/*"
+    ],
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.js?(x)",
       "<rootDir>/scripts/**/__tests__/**/*.js?(x)"
