set default tags to develop

--- a/containers/base/cli.config.json
+++ b/containers/base/cli.config.json
@@ -45,7 +45,8 @@
         "preConfirm": false,
         "buildKit": true,
         "force": true,
-        "defaultLocalBuild": true
+        "defaultLocalBuild": true,
+        "defaultTag": "develop"
       },
       "checkUpdates": false,
       "editorCmd": false,
