--- a/scripts/ci/ci.config.json
+++ b/scripts/ci/ci.config.json
@@ -31,7 +31,7 @@
         "force": true,
         "defaultLocalBuild": false,
         "imagePullPolicy": "Always",
-        "defaultTag": "master"
+        "defaultTag": "develop"
       },
       "checkUpdates": false,
       "editorCmd": "code",
