--- a/scripts/setup/cli.config.json
+++ b/scripts/setup/cli.config.json
@@ -30,7 +30,7 @@
         "force": true,
         "defaultLocalBuild": true,
         "imagePullPolicy": "Always",
-        "defaultTag": "master"
+        "defaultTag": "develop"
       },
       "checkUpdates": false,
       "editorCmd": "code",
