--- a/scripts/ci/ci.env
+++ b/scripts/ci/ci.env
@@ -16,7 +16,7 @@ KEG_CONFIG_PATH={{ cli.paths.kegConfig }}
 # --- EXPO CONTEXT ENVs --- #
 
 # Cli
-# Version of the expo CLI installed into the keg-base:master image
+# Version of the expo CLI installed into the keg-base:develop image
 EXPO_CLI_VERSION=4.3.0
 # dependency for expo-cli
 SHARP_CLI_VERSION=1.10.0
