--- a/scripts/setup/defaults.env
+++ b/scripts/setup/defaults.env
@@ -29,12 +29,12 @@ GIT_CLI_BRANCH=master
 
 # --- DOCKER ENV CONTEXT --- #
 
-# Version of the expo CLI installed into the keg-base:master image
+# Version of the expo CLI installed into the keg-base:develop image
 EXPO_CLI_VERSION=4.3.0
 # dependency for expo-cli
 SHARP_CLI_VERSION=1.10.0
 
-# Version of Node to use for the keg-base:master image
+# Version of Node to use for the keg-base:develop image
 KEG_NODE_VERSION=14.16.0-alpine
 
 # Name of the image used in the FROM directive of the Dockerfile
