fix(package task): Container Ref fix   * Added fix for when a container ID is passed as the container ref when finding the build action   * Added warning log when no build action can be found   * Added showHelp back to cli-utils Logger   * Added build and serve actions for keg-components

--- a/containers/components/values.yml
+++ b/containers/components/values.yml
@@ -1,4 +1,13 @@
-
+actions:
+  tap:
+    build:
+      cmds:
+        - yarn sb:build
+        - rm -rf /keg/components-build
+        - cp -R /keg/keg-components/docs /keg/components-build
+    serve:
+      cmds:
+        - npx serve /keg/components-build --cors -n -l {{ envs.KEG_PROXY_PORT }}
 env:
   # --- LOCAL ENV CONTEXT --- #
 
