--- a/containers/base/values.yml
+++ b/containers/base/values.yml
@@ -1,7 +1,7 @@
 env:
   # --- BASE ENV CONTEXT --- #
 
-  KEG_CONTEXT_PATH: "{{ cli.paths.keg }}"
+  KEG_CONTEXT_PATH: "{{ cli.paths.cli }}"
   KEG_DOCKER_FILE: "{{ cli.paths.containers }}/base/Dockerfile"
   KEG_VALUES_FILE: "{{ cli.paths.containers }}/base/values.yml"
   KEG_COMPOSE_DEFAULT: "{{ cli.paths.containers }}/base/docker-compose.yml"
