feat(containers): Internal app containers * Rewrote the run.sh scripts  * Runs differnt cmds based on NODE_ENV *  Added DOC_BUILD_PATH for web build export path * Added actions to the Values.yml files     * Updated to use ENVs

--- a/containers/components/docker-compose.yml
+++ b/containers/components/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING
       - DOC_APP_PATH
+      - DOC_BUILD_PATH
       - DOC_RETHEME_PATH
       - DOC_JSUTILS_PATH
       - KEG_EXEC_CMD
