--- a/containers/tap/docker-compose.yml
+++ b/containers/tap/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING
       - DOC_APP_PATH
+      - DOC_BUILD_PATH
       - DOC_CLI_PATH
       - DOC_CORE_PATH
       - DOC_COMPONENTS_PATH
