--- a/containers/core/docker-compose.yml
+++ b/containers/core/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING
       - DOC_APP_PATH
+      - DOC_BUILD_PATH
       - DOC_COMPONENTS_PATH
       - DOC_RESOLVER_PATH
       - DOC_RETHEME_PATH
