--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "log-update": "4.0.0",
     "module-alias": "2.2.2",
     "ngrok": "3.2.7",
+    "open": "^8.0.6",
     "qrcode-terminal": "0.12.0",
     "rimraf": "3.0.2",
     "semver": "^7.3.2",
