feat: Added cli update script   * Due to keg-components being removed     * We need to update the config and default envs   * Fixed some path refs to keg-components

--- a/containers/tap/values.yml
+++ b/containers/tap/values.yml
@@ -1,7 +1,7 @@
 
 env:
   # --- LOCAL ENV CONTEXT --- #
-  COMPONENTS_PATH: "{{ cli..taps.components.path }}"
+  COMPONENTS_PATH: "{{ cli.taps.components.path }}"
   RETHEME_PATH: "{{ cli.taps.retheme.path }}"
   RESOLVER_PATH: "{{ cli.paths.resolver }}"
   CLI_PATH: "{{ cli.paths.cli }}"
