Zen 609 automate packages - Part 1 (#60)
[Semver-Status] patch
 
* feat(tasks): Docker Package task
  * Cleaned up package task
  * Moved methods to package utils
  * Added more notes
  * Fixed issues with cli tests
  * Added tests for package utils methods
  * Started util for building an app bundle

* fix(utils): Fixed export of package util

* feat(tasks): Finished updated package task
  * Added loading an action from values files
  * Added action options to package task
  * Added calling an action before the package task runs
    * defaults to tap.build task
   * Is bypassed if not defined
* Added an actions folder in utils
*  Started adding tests for package and actions utils methods
* Updated tap package task to use shared options
* Cleaned up the docker package task

**TODO**
* Need to figure out way to pass a serve action along with an image. Options are
  * Add to image as a label
  * Add file to the new image that contains the serve cmd
* Next need to update the package run cmd to use the serve cmd when it exists

* feat(libs): Migrated the logger to use cli-utils
  * Removed the logger from the libs folder

* feat(tests): Added Tests
  * Added tests for actions and package utils
  * Cleaned up test mocks a bit
  * Updated testEnum to allow a function as the outputs property

* fix(package task): Container Ref fix
  * Added fix for when a container ID is passed as the container ref when finding the build action
  * Added warning log when no build action can be found
  * Added showHelp back to cli-utils Logger
  * Added build and serve actions for keg-components

* fix(tests): Fixed tests for getActionsFromValues

* fix(actions): Small fix to warning message

* docs(package task): Updated  JS doc comments

* Zen 609 automate packages - Part 2 (#61)

* feat(containers): Internal app containers
* Rewrote the run.sh scripts
 * Runs differnt cmds based on NODE_ENV
*  Added DOC_BUILD_PATH for web build export

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "KegFileSys": "src/libs/fileSys",
     "KegGitCli": "src/libs/git",
     "KegLibs": "src/libs",
-    "KegLog": "src/libs/logger",
+    "KegLog": "repos/cli-utils/src/logger",
     "KegMocks": "src/__mocks__",
     "KegProc": "src/libs/process",
     "KegMutagen": "src/libs/mutagen",
@@ -99,7 +99,7 @@
       "^KegFileSys(.*)$": "<rootDir>/src/libs/fileSys$1",
       "^KegGitCli(.*)$": "<rootDir>/src/libs/git$1",
       "^KegLibs(.*)$": "<rootDir>/src/libs$1",
-      "^KegLog(.*)$": "<rootDir>/src/libs/logger$1",
+      "^KegLog(.*)$": "<rootDir>/repos/cli-utils/src/logger$1",
       "^KegMocks(.*)$": "<rootDir>/src/__mocks__$1",
       "^KegMutagen(.*)$": "<rootDir>/src/libs/mutagen$1",
       "^KegProc(.*)$": "<rootDir>/src/libs/process$1",
@@ -112,6 +112,9 @@
       "^KegTasks(.*)$": "<rootDir>/src/tasks$1",
       "^KegUtils(.*)$": "<rootDir>/src/utils$1"
     },
+    "modulePathIgnorePatterns": [
+      "<rootDir>/repos/*"
+    ],
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.js?(x)",
       "<rootDir>/scripts/**/__tests__/**/*.js?(x)"
