feat(git-lib): Delete old /libs/git   * Migrated utils/git/* to repos/git-lib/utils

--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "KegCrypto": "src/libs/crypto",
     "KegDocCli": "src/libs/docker",
     "KegFileSys": "src/libs/fileSys",
-    "KegGitCli": "src/libs/git",
+    "KegGitCli": "repos/git-lib",
     "KegLibs": "src/libs",
     "KegLog": "repos/cli-utils/src/logger",
     "KegMocks": "src/__mocks__",
@@ -97,7 +97,7 @@
       "^KegCrypto(.*)$": "<rootDir>/src/libs/crypto$1",
       "^KegDocCli(.*)$": "<rootDir>/src/libs/docker$1",
       "^KegFileSys(.*)$": "<rootDir>/src/libs/fileSys$1",
-      "^KegGitCli(.*)$": "<rootDir>/src/libs/git$1",
+      "^KegGitCli(.*)$": "<rootDir>/repos/git-lib$1",
       "^KegLibs(.*)$": "<rootDir>/src/libs$1",
       "^KegLog(.*)$": "<rootDir>/repos/cli-utils/src/logger$1",
       "^KegMocks(.*)$": "<rootDir>/src/__mocks__$1",
