--- a/.github/workflows/cli-test.yml
+++ b/.github/workflows/cli-test.yml
@@ -23,6 +23,10 @@ jobs:
         uses: bahmutov/npm-install@v1
         with:
           install-command: yarn install --ignore-engines --frozen-lockfile --silent
+          working-directory: |
+            ./
+            repos/cli-utils
+            repos/git-lib
 
       - name: "Setup CLI config"
         id: setup-cli-config
