--- a/containers/tap/values.yml
+++ b/containers/tap/values.yml
@@ -11,8 +11,8 @@ actions:
         - npx serve {{ envs.DOC_BUILD_PATH }} --cors -n -l {{ envs.KEG_PROXY_PORT }}
 env:
   # --- LOCAL ENV CONTEXT --- #
-  COMPONENTS_PATH: "{{ cli.paths.components }}"
-  RETHEME_PATH: "{{ cli.taps.links.retheme }}"
+  COMPONENTS_PATH: "{{ cli.taps.components.path }}"
+  RETHEME_PATH: "{{ cli.taps.retheme.path }}"
   RESOLVER_PATH: "{{ cli.paths.resolver }}"
   CLI_PATH: "{{ cli.paths.cli }}"
   
