--- a/repos/cli-utils/package.json
+++ b/repos/cli-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@keg-hub/cli-utils",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Utility methods for writing Custom Tasks consumed by the Keg-CLI",
   "main": "index.js",
   "repository": "https://github.com/lancetipton/keg-cli-uilts",
@@ -11,6 +11,8 @@
     "access": "public"
   },
   "files": [
+    "__mocks__",
+    "mocks.js",
     "configs/",
     "index.js",
     "src/"
@@ -31,7 +33,7 @@
   "dependencies": {
     "@keg-hub/args-parse": "6.2.1",
     "@keg-hub/ask-it": "0.0.1",
-    "@keg-hub/jsutils": "8.1.0",
+    "@keg-hub/jsutils": "8.5.0",
     "@keg-hub/spawn-cmd": "0.1.0",
     "app-root-path": "3.0.0",
     "colors": "1.4.0",
