--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "KegLog": "repos/cli-utils/src/logger",
     "KegMocks": "src/__mocks__",
     "KegProc": "src/libs/process",
-    "KegMutagen": "src/libs/mutagen",
+    "KegMutagen": "repos/mutagen-lib",
     "KegPackage": "package.json",
     "KegRepos": "repos/",
     "KegRoot": ".",
@@ -102,7 +102,7 @@
       "^KegLibs(.*)$": "<rootDir>/src/libs$1",
       "^KegLog(.*)$": "<rootDir>/repos/cli-utils/src/logger$1",
       "^KegMocks(.*)$": "<rootDir>/src/__mocks__$1",
-      "^KegMutagen(.*)$": "<rootDir>/src/libs/mutagen$1",
+      "^KegMutagen(.*)$": "<rootDir>/repos/mutagen-lib$1",
       "^KegProc(.*)$": "<rootDir>/src/libs/process$1",
       "^KegPackage(.*)$": "<rootDir>/package.json",
       "^KegRepos(.*)$": "<rootDir>/repos$1",
