--- a/repos/cli-utils/package.json
+++ b/repos/cli-utils/package.json
@@ -40,6 +40,9 @@
     "fs-extra": "9.0.1",
     "jest-cli": "^26.6.3"
   },
+  "resolutions": {
+    "@keg-hub/jsutils": "8.5.0"
+  },
   "devDependencies": {
     "babel-eslint": "10.1.0",
     "eslint": "7.4.0",
