migrated getTapConfig and getTapPath into cli-utils

--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "KegProc": "src/libs/process",
     "KegMutagen": "src/libs/mutagen",
     "KegPackage": "package.json",
+    "KegRepos": "repos/",
     "KegRoot": ".",
     "KegRunTask": "src/runTask",
     "KegScripts": "scripts",
@@ -105,6 +106,7 @@
       "^KegMutagen(.*)$": "<rootDir>/src/libs/mutagen$1",
       "^KegProc(.*)$": "<rootDir>/src/libs/process$1",
       "^KegPackage(.*)$": "<rootDir>/package.json",
+      "^KegRepos(.*)$": "<rootDir>/repos$1",
       "^KegRoot(.*)$": "<rootDir>$1",
       "^KegRunTask(.*)$": "<rootDir>/src/runTask$1",
       "^KegScripts(.*)$": "<rootDir>/scripts$1",
