--- a/containers/base/values.yml
+++ b/containers/base/values.yml
@@ -15,6 +15,9 @@ env:
   # --- DOCKER ENV CONTEXT --- #
   DOC_APP_PATH: /keg-hub
 
+  KEG_BASE_IMAGE: ghcr.io/simpleviewinc/keg-base:develop
+  KEG_IMAGE_FROM: ghcr.io/simpleviewinc/keg-base:develop
+
   # Image ENVs
   IMAGE: keg-base
   VERSION: 1.0.0
