--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "clean:full": "yarn clean && yarn install",
     "clean": "yarn clean:lock && yarn cache clean && rimraf node_modules && npm cache clean --force",
     "clean:lock": "rimraf ./yarn.lock && rimraf ./package.lock",
-    "doc:publish": "cd ./scripts/ci/ && bash buildPushDockerImages.sh",
     "format": "exit 0",
     "keg": "./keg",
     "init:bash": "/bin/bash ./scripts/setup/mac-init.sh",
@@ -77,6 +76,7 @@
     "KegProc": "src/libs/process",
     "KegMutagen": "src/libs/mutagen",
     "KegPackage": "package.json",
+    "KegRepos": "repos/",
     "KegRoot": ".",
     "KegRunTask": "src/runTask",
     "KegScripts": "scripts",
@@ -105,6 +105,7 @@
       "^KegMutagen(.*)$": "<rootDir>/src/libs/mutagen$1",
       "^KegProc(.*)$": "<rootDir>/src/libs/process$1",
       "^KegPackage(.*)$": "<rootDir>/package.json",
+      "^KegRepos(.*)$": "<rootDir>/repos$1",
       "^KegRoot(.*)$": "<rootDir>$1",
       "^KegRunTask(.*)$": "<rootDir>/src/runTask$1",
       "^KegScripts(.*)$": "<rootDir>/scripts$1",
