feat(task): Tap Generate  * Started task to generate a tap  * Added resolvePath helper  * Added alias to cli-utils repo

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "jest-sonar-reporter": "2.0.0"
   },
   "_moduleAliases": {
+    "KegCliUtils": "repos/cli-utils",
     "KegConst": "src/constants",
     "KegCrypto": "src/libs/crypto",
     "KegDocCli": "src/libs/docker",
