--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "5.1.0",
   "description": "Node.js CLI for working with Keg Repos and Taps",
   "main": "./keg",
-  "repository": "https://github.com/lancetipton/Keg-CLI",
+  "repository": "https://github.com/simpleviewinc/Keg-CLI",
   "author": "Lance Tipton",
   "license": "MIT",
   "bin": {
