Move mutagen to repo (#76)
* feat(mutagen-lib): Migrate mutagen to repos folder

* feat(mutagen): Starte cleaning up mutagen-lib
* Started adding constants

* feat(mutagen): Updated mutagen requires
  * Updated to not usre alias for imports
  * No all requires are relative to the mutagen repo
  * Removed constants as it's just using the new line pattern constnat
    * Moved new line constant to file where it's being used
  * Commented out loadYml / writeYml
    * Not currently being used, and cli-utils fileSys does not support yml

* Updated cli-utils constants to include GLOBAL_CONFIG_FOLDER && GLOBAL_CONFIG_FILE
  * Exported from constant to allow re-use in other locations

* feat(mutagen): Add yarn.lock

* fix(mutagen): Small test update
  * Fixed url path for keg-cli

* fix(muagen): fixed test

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "5.1.0",
   "description": "Node.js CLI for working with Keg Repos and Taps",
   "main": "./keg",
-  "repository": "https://github.com/lancetipton/Keg-CLI",
+  "repository": "https://github.com/simpleviewinc/Keg-CLI",
   "author": "Lance Tipton",
   "license": "MIT",
   "bin": {
@@ -74,7 +74,7 @@
     "KegLog": "repos/cli-utils/src/logger",
     "KegMocks": "src/__mocks__",
     "KegProc": "src/libs/process",
-    "KegMutagen": "src/libs/mutagen",
+    "KegMutagen": "repos/mutagen-lib",
     "KegPackage": "package.json",
     "KegRepos": "repos/",
     "KegRoot": ".",
@@ -102,7 +102,7 @@
       "^KegLibs(.*)$": "<rootDir>/src/libs$1",
       "^KegLog(.*)$": "<rootDir>/repos/cli-utils/src/logger$1",
       "^KegMocks(.*)$": "<rootDir>/src/__mocks__$1",
-      "^KegMutagen(.*)$": "<rootDir>/src/libs/mutagen$1",
+      "^KegMutagen(.*)$": "<rootDir>/repos/mutagen-lib$1",
       "^KegProc(.*)$": "<rootDir>/src/libs/process$1",
       "^KegPackage(.*)$": "<rootDir>/package.json",
       "^KegRepos(.*)$": "<rootDir>/repos$1",
