updated test script to test all repos

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "format": "exit 0",
     "keg": "./keg",
     "init:bash": "/bin/bash ./scripts/setup/mac-init.sh",
-    "test": "yarn test:jest",
+    "test": "bash scripts/test.sh",
+    "test:root": "yarn test:jest",
     "test:jest": "NODE_ENV=test jest --no-cache --verbose --maxWorkers=50%",
     "test:e2e": "NODE_ENV=test node ./scripts/cli/tests/index.js",
     "test:reports": "yarn test --coverage && yarn view:reports",
