--- a/package.json
+++ b/package.json
@@ -30,17 +30,15 @@
     "format": "exit 0",
     "keg": "./keg",
     "init:bash": "/bin/bash ./scripts/setup/mac-init.sh",
-    "test": "yarn test:jest",
+    "test": "bash scripts/test.sh",
+    "test:root": "yarn test:jest",
     "test:jest": "NODE_ENV=test jest --no-cache --verbose --maxWorkers=50%",
     "test:e2e": "NODE_ENV=test node ./scripts/cli/tests/index.js",
     "test:reports": "yarn test --coverage && yarn view:reports",
     "view:reports": "open reports/coverage/lcov-report/index.html"
   },
   "dependencies": {
-    "@keg-hub/args-parse": "6.2.3",
-    "@keg-hub/ask-it": "0.0.2",
     "@keg-hub/jsutils": "8.6.0",
-    "@keg-hub/spawn-cmd": "0.1.2",
     "axios": "0.21.1",
     "cli-progress": "3.8.2",
     "cli-spinners": "2.3.0",
