updating name to include org

--- a/repos/git-lib/package.json
+++ b/repos/git-lib/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "git-lib",
+  "name": "@keg-hub/git-lib",
   "version": "0.0.1",
   "description": "Wrapper around the git command line executable",
   "main": "index.js",
