--- a/repos/parse-config/package.json
+++ b/repos/parse-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parse-lib",
+  "name": "@keg-hub/parse-config",
   "version": "0.0.0",
   "description": "Utils to allow loading non-javascript files into a node environment",
   "main": "index.js",
