feat(cli): Migrate cli to use parse-config   * Updated to use yml methods

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "KegDocCli": "src/libs/docker",
     "KegFileSys": "src/libs/fileSys",
     "KegGitCli": "repos/git-lib",
+    "KegPConf": "repos/parse-config",
     "KegLibs": "src/libs",
     "KegLog": "repos/cli-utils/src/logger",
     "KegMocks": "src/__mocks__",
