--- a/repos/parse-config/package.json
+++ b/repos/parse-config/package.json
@@ -28,7 +28,7 @@
     "format:eslint": "eslint --config ./configs/eslintrc.config.js . --fix --quiet",
     "format:prettier": "prettier --config ./configs/prettier.config.js --ignore-path .eslintignore --write '**/*.{js,jsx}'",
     "format": "yarn format:prettier && yarn format:eslint",
-    "test": "NODE_ENV=test jest --no-cache --verbose --config=./configs/jest.config.js"
+    "test": "NODE_ENV=test jest --no-cache --verbose --config=./configs/jest.config.js --maxWorkers=50%"
   },
   "dependencies": {
     "@keg-hub/jsutils": "8.6.0",
