feat(fileSys): Fully migrated fileSys out of keg-cli   * Updated alias to use cli-utils   * Updated imports where needed   * Fixed tests   * Removed unused code

--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "KegConst": "src/constants",
     "KegCrypto": "src/libs/crypto",
     "KegDocCli": "src/libs/docker",
-    "KegFileSys": "src/libs/fileSys",
+    "KegFileSys": "repos/cli-utils/src/fileSys",
     "KegGitCli": "repos/git-lib",
     "KegPConf": "repos/parse-config",
     "KegLibs": "src/libs",
@@ -96,7 +96,7 @@
       "^KegConst(.*)$": "<rootDir>/src/constants$1",
       "^KegCrypto(.*)$": "<rootDir>/src/libs/crypto$1",
       "^KegDocCli(.*)$": "<rootDir>/src/libs/docker$1",
-      "^KegFileSys(.*)$": "<rootDir>/src/libs/fileSys$1",
+      "^KegFileSys(.*)$": "<rootDir>/repos/cli-utils/src/fileSys/fileSys$1",
       "^KegGitCli(.*)$": "<rootDir>/repos/git-lib$1",
       "^KegLibs(.*)$": "<rootDir>/src/libs$1",
       "^KegLog(.*)$": "<rootDir>/repos/cli-utils/src/logger$1",
