--- a/repos/parse-config/package.json
+++ b/repos/parse-config/package.json
@@ -2,6 +2,7 @@
   "name": "@keg-hub/parse-config",
   "version": "0.0.1",
   "description": "Utils to allow loading non-javascript files into a node environment",
+  "repository": "https://github.com/simpleviewinc/keg-cli/tree/master/repos/parse-config",
   "main": "index.js",
   "author": "Lance Tipton",
   "license": "MIT",
