--- a/package.json
+++ b/package.json
@@ -66,8 +66,9 @@
     "KegConst": "src/constants",
     "KegCrypto": "src/libs/crypto",
     "KegDocCli": "src/libs/docker",
-    "KegFileSys": "src/libs/fileSys",
+    "KegFileSys": "repos/cli-utils/src/fileSys",
     "KegGitCli": "repos/git-lib",
+    "KegPConf": "repos/parse-config",
     "KegLibs": "src/libs",
     "KegLog": "repos/cli-utils/src/logger",
     "KegMocks": "src/__mocks__",
@@ -95,7 +96,7 @@
       "^KegConst(.*)$": "<rootDir>/src/constants$1",
       "^KegCrypto(.*)$": "<rootDir>/src/libs/crypto$1",
       "^KegDocCli(.*)$": "<rootDir>/src/libs/docker$1",
-      "^KegFileSys(.*)$": "<rootDir>/src/libs/fileSys$1",
+      "^KegFileSys(.*)$": "<rootDir>/repos/cli-utils/src/fileSys/fileSys$1",
       "^KegGitCli(.*)$": "<rootDir>/repos/git-lib$1",
       "^KegLibs(.*)$": "<rootDir>/src/libs$1",
       "^KegLog(.*)$": "<rootDir>/repos/cli-utils/src/logger$1",
@@ -103,6 +104,7 @@
       "^KegMutagen(.*)$": "<rootDir>/repos/mutagen-lib$1",
       "^KegProc(.*)$": "<rootDir>/src/libs/process$1",
       "^KegPackage(.*)$": "<rootDir>/package.json",
+      "^KegPConf(.*)$": "<rootDir>/repos/parse-config$1",
       "^KegRepos(.*)$": "<rootDir>/repos$1",
       "^KegRoot(.*)$": "<rootDir>$1",
       "^KegRunTask(.*)$": "<rootDir>/src/runTask$1",
