--- a/scripts/ci/ci.env
+++ b/scripts/ci/ci.env
@@ -16,10 +16,10 @@ KEG_CONFIG_PATH={{ cli.paths.kegConfig }}
 # --- EXPO CONTEXT ENVs --- #
 
 # Cli
-# Version of the expo CLI installed into the keg-base:develop image
-EXPO_CLI_VERSION=4.3.0
+# Version of the expo CLI installed into the keg-base:master image
+EXPO_CLI_VERSION=4.10.0
 # dependency for expo-cli
-SHARP_CLI_VERSION=1.10.0
+SHARP_CLI_VERSION=1.15.0
 
 # Name of the image used in the FROM directive of the Dockerfile
 KEG_NODE_VERSION=14.16.0-alpine
