--- a/scripts/ci/ci.env
+++ b/scripts/ci/ci.env
@@ -22,7 +22,7 @@ EXPO_CLI_VERSION=4.3.0
 SHARP_CLI_VERSION=1.10.0
 
 # Name of the image used in the FROM directive of the Dockerfile
-KEG_NODE_VERSION=14.16.0-alpine
+KEG_NODE_VERSION=16-alpine
 
 # Container Ports
 EXPO_DEBUG_PORT=19002
