--- a/containers/base/Dockerfile
+++ b/containers/base/Dockerfile
@@ -5,8 +5,7 @@ FROM $KEG_NODE_IMAGE as keg-builder
 WORKDIR /
 
 # Add git so we can pull down keg-repos
-# RUN apk --no-cache --virtual add git python .gyp python make g++
-RUN apk add --no-cache git python make g++; \
+RUN apk add --update --no-cache git py-pip make g++; \
     yarn global add expo-cli@$EXPO_CLI_VERSION sharp-cli@$SHARP_CLI_VERSION nodemon --pure-lockfile
 
 # ---- Setup keg-hub within the container ---- #
