chore(deps): Update dependencies (#112)
* chore(deps): Update ENVs and core container deps

* fix(cli): Fix hub and docker tasks
  * Added prefix option to docker attach and exec
    * Allows passing a prefix when runnign a cmd
    * This allows connecting to a package run container
    * Or a contianer started with the docker run task
  * Clened up the docker image tag task
    * Allows setting if the provider should be included in the image tag
    * Allows renameing the image when setting the tag
  * Fixed the pull image option
    * Passing in --pull or --no-pull as an option now works properly
    * Removed pull option default to true
      * It should use the option or setting from the global config
  * Reworked keg-hub dependencies task
    * Now compares version by dependency type instead of globally

* chore(deps): Update default node docker image
  * Update to version 16-alpine
  * Update update script to sync ENV's
  * Update tap Dockerfile to include copy local changes

* fix(docker): Remove local copy core from tap Dockerfile

* fix(base): Fix python install in docker file

* fix(node): Revert node version to 14.17
  * Expo-CLI does not yet work with version 16

* fix(docker): Add ignore params to docker build script

* Update containers/base/build.sh

Co-authored-by: Michael Carolin  <mpcarolin.dev@gmail.com>

* Update scripts/cli/updates/5.2.0.sh

Co-authored-by: Michael Carolin  <mpcarolin.dev@gmail.com>

Co-authored-by: Michael Carolin  <mpcarolin.dev@gmail.com>

--- a/containers/tap/Dockerfile
+++ b/containers/tap/Dockerfile
@@ -22,36 +22,19 @@ ENV PATH=$PATH:/usr/local/share/.config/yarn/global/node_modules/.bin
 # Copy over required items from the keg-base image
 COPY --from=keg-base /usr/local/share/.config/yarn /usr/local/share/.config/yarn
 COPY --from=keg-base /keg-hub/repos/keg-cli/containers/tap/run.sh /keg/tap-run.sh
-
-# Remove the local copy from the host machine, once the build.sh is merged upstream
-# For now, we have to copy it from the current host, so this is commented out
-# COPY --from=keg-base /keg-hub/repos/keg-cli/containers/tap/build.sh /keg/tap-build.sh
-# Add this to line 35's Run block => chmod a+x /keg/tap-build.sh; \
+COPY --from=keg-base /keg-hub/repos/keg-cli/containers/tap/build.sh /keg/tap-build.sh
 
 # Copy over the keg-core code with the latest changes
 COPY --from=keg-base /keg-hub/repos/keg-core /keg-hub/repos/keg-core
 
 # Install the dependecies with yarn install, then remove the .npmrc
 RUN chmod a+x /keg/tap-run.sh; \
+    chmod a+x /keg/tap-build.sh; \
     apk add git bash; \
     echo fs.inotify.max_user_watches=1048576 | sudo tee -a /etc/sysctl.conf; \
     sudo sysctl -p; \
     rm -rf /var/cache/apk/*; \
     /bin/sed -i '1s|.*|root:x:0:0:root:/root:/bin/bash|g' /etc/passwd
-
-# ----------------- TODO: -----------------
-
-# Remove the local copy from the host machine, once the build.sh is merged upstream
-# For now, we have to copy it from the current host, so this is commented out
-
-
-# Temporary until containers/tap exists upstream
-# Remove this once that happends
-
-COPY ./build.sh /keg/tap-build.sh
-RUN chmod a+x /keg/tap-build.sh
-
-# ----------------- TODO: -----------------
 
 # Set the current directory to keg-core repo
 WORKDIR /keg
