--- a/containers/base/defaults.env
+++ b/containers/base/defaults.env
@@ -25,13 +25,13 @@ GIT_CLI_BRANCH=master
 
 # --- DOCKER ENV CONTEXT --- #
 
-# Version of the expo CLI installed into the keg-base:develop image
-EXPO_CLI_VERSION=4.3.0
+# Version of the expo CLI installed into the keg-base:master image
+EXPO_CLI_VERSION=4.10.0
 # dependency for expo-cli
-SHARP_CLI_VERSION=1.10.0
+SHARP_CLI_VERSION=1.15.0
 
 # Version of Node to use for the keg-base:develop image
-KEG_NODE_VERSION=14.16.0-alpine
+KEG_NODE_VERSION=14.7-alpine
 
 # Name of the image used in the FROM directive of the Dockerfile
 KEG_IMAGE_FROM=ghcr.io/simpleviewinc/keg-base:{{cli.settings.docker.defaultTag}}
