--- a/scripts/setup/defaults.env
+++ b/scripts/setup/defaults.env
@@ -28,13 +28,14 @@ GIT_CLI_BRANCH=master
 
 # --- DOCKER ENV CONTEXT --- #
 
-# Version of the expo CLI installed into the keg-base:develop image
-EXPO_CLI_VERSION=4.3.0
+# Cli
+# Version of the expo CLI installed into the keg-base:master image
+EXPO_CLI_VERSION=4.10.0
 # dependency for expo-cli
-SHARP_CLI_VERSION=1.10.0
+SHARP_CLI_VERSION=1.15.0
 
 # Version of Node to use for the keg-base:develop image
-KEG_NODE_VERSION=14.16.0-alpine
+KEG_NODE_VERSION=14.7-alpine
 
 KEG_IMAGE_FROM=ghcr.io/simpleviewinc/keg-base:{{cli.settings.docker.defaultTag}}
 KEG_IMAGE_TAG={{ cli.settings.docker.defaultTag }}
