--- a/containers/core/values.yml
+++ b/containers/core/values.yml
@@ -8,7 +8,7 @@ actions:
     serve:
       detach: true
       cmds:
-        - npx serve {{ envs.DOC_BUILD_PATH }} --cors -n -l {{ envs.KEG_PROXY_PORT }}
+        - npx serve {{ envs.DOC_BUILD_PATH }} --cors -n -l {{ envs.TAP_PROXY_PORT }}
 env:
   # --- LOCAL ENV CONTEXT --- #
   COMPONENTS_PATH: "{{ cli.taps.components.path }}"
@@ -45,8 +45,6 @@ env:
 
   DOC_BUILD_PATH: /keg/core-build
 
-  # Port the application will use when running within the container
-  # Required to allow the keg-proxy to route traffic to it
 
   # Defines the location in a docker container for a dependency
   # This allows mutagen to know where to sync the local version of the dependency
@@ -68,14 +66,16 @@ env:
     # add KEG_PROXY_HOST env and set it's value to the what network should be used
     # the default is 'keg-hub-net'
 
-  # KEG_PROXY_PORT - 80
+  # TAP_PROXY_PORT - 80
     # If not set, then port 80 will be used by default
     # Port the proxy will route traffic to within the container
     # This should be the port the application expects to receive traffic on
     # This port should not be ( You can still do these things, but it's better not to )
     #   * Exposed publicly on the container
     #   * Bound to the host machine
-  KEG_PROXY_PORT: 19006
+  TAP_PROXY_PORT: 19006
+  # KEG_PROXY_PORT is deprecated, and should no longer be used
+  # KEG_PROXY_PORT: 19006
 
   # --- GENERAL CONTEXT ENVs --- #
 
