chore(tasks): Remove custom task references

--- a/scripts/ci/ci.config.json
+++ b/scripts/ci/ci.config.json
@@ -8,9 +8,7 @@
     "token": ""
   },
   "cli": {
-    "paths": {
-      "customTasks": ""
-    },
+    "paths": {},
     "git": {
       "orgName": "simpleviewinc",
       "orgUrl": "https://github.com/simpleviewinc",
