feat(event-dispatch): Started event dispatcher   * Allows storing items in state   * Can call dispatch to update the state   * Can call getStore to get a stores current state

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "KegConst": "src/constants",
     "KegCrypto": "src/libs/crypto",
     "KegDocCli": "src/libs/docker",
+    "KegEvent": "repos/cli-core/eventDispatch",
     "KegFileSys": "repos/cli-utils/src/fileSys",
     "KegGitCli": "repos/git-lib",
     "KegPConf": "repos/parse-config",
