--- a/containers/base/defaults.env
+++ b/containers/base/defaults.env
@@ -34,7 +34,7 @@ SHARP_CLI_VERSION=1.15.0
 KEG_NODE_VERSION=14.17-alpine
 
 # Name of the image used in the FROM directive of the Dockerfile
-KEG_IMAGE_FROM=ghcr.io/simpleviewinc/keg-base:{{cli.settings.docker.defaultTag}}
+KEG_IMAGE_FROM=ghcr.io/{{ cli.git.orgUrl }}/keg-base:{{cli.settings.docker.defaultTag}}
 KEG_IMAGE_TAG={{ cli.settings.docker.defaultTag }}
 
 # Entry point to the keg-proxy for all services
