--- a/repos/args-parse/package.json
+++ b/repos/args-parse/package.json
@@ -4,13 +4,13 @@
   "description": "Parse command line arguments",
   "main": "src/index.js",
   "repository": {
-    "url": "git+https://github.com/simpleviewinc/keg-hub.git",
+    "url": "git+https://github.com/lancetipton/keg-hub.git",
     "type": "git"
   },
   "bugs": {
-    "url": "https://github.com/simpleviewinc/keg-hub/issues"
+    "url": "https://github.com/lancetipton/keg-hub/issues"
   },
-  "homepage": "https://github.com/simpleviewinc/keg-hub#readme",
+  "homepage": "https://github.com/lancetipton/keg-hub#readme",
   "author": "lancetipton <lancetipton04@gmail.com>",
   "license": "MIT",
   "publishConfig": {
