--- a/repos/spawn-cmd/package.json
+++ b/repos/spawn-cmd/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.2",
   "description": "Cross platform child_process execution in Node",
   "repository": {
-    "url": "git+https://github.com/simpleviewinc/keg-hub.git",
+    "url": "git+https://github.com/lancetipton/keg-hub.git",
     "type": "git"
   },
   "bugs": {
-    "url": "https://github.com/simpleviewinc/keg-hub/issues"
+    "url": "https://github.com/lancetipton/keg-hub/issues"
   },
-  "homepage": "https://github.com/simpleviewinc/keg-hub#readme",
+  "homepage": "https://github.com/lancetipton/keg-hub#readme",
   "main": "index.js",
   "author": "Lance Tipton",
   "license": "MIT",
