--- a/scripts/ci/ci.config.json
+++ b/scripts/ci/ci.config.json
@@ -3,7 +3,7 @@
   "displayName": "Keg CLI",
   "docker": {
     "providerUrl": "ghcr.io",
-    "namespace": "simpleviewinc",
+    "namespace": "lancetipton",
     "user": "",
     "token": ""
   },
@@ -12,8 +12,8 @@
       "customTasks": ""
     },
     "git": {
-      "orgName": "simpleviewinc",
-      "orgUrl": "https://github.com/simpleviewinc",
+      "orgName": "lancetipton",
+      "orgUrl": "https://github.com/lancetipton",
       "provider": "https://github.com",
       "publicToken": "",
       "repos": {
