--- a/scripts/ci/ci.env
+++ b/scripts/ci/ci.env
@@ -41,8 +41,8 @@ GIT_HUB_BRANCH=develop
 
 
 # --- DOCKER ENV CONTEXT --- #
-KEG_BASE_IMAGE=ghcr.io/simpleviewinc/keg-base:{{ cli.settings.docker.defaultTag }}
-KEG_IMAGE_FROM=ghcr.io/simpleviewinc/keg-base:{{ cli.settings.docker.defaultTag }}
+KEG_BASE_IMAGE=ghcr.io/lancetipton/keg-base:{{ cli.settings.docker.defaultTag }}
+KEG_IMAGE_FROM=ghcr.io/lancetipton/keg-base:{{ cli.settings.docker.defaultTag }}
 KEG_IMAGE_TAG={{ cli.settings.docker.defaultTag }}
 
 # Entry point to the keg-proxy for all services
