--- a/scripts/setup/defaults.env
+++ b/scripts/setup/defaults.env
@@ -37,7 +37,7 @@ SHARP_CLI_VERSION=1.15.0
 # Version of Node to use for the keg-base:develop image
 KEG_NODE_VERSION=14.17-alpine
 
-KEG_IMAGE_FROM=ghcr.io/simpleviewinc/keg-base:{{cli.settings.docker.defaultTag}}
+KEG_IMAGE_FROM=ghcr.io/lancetipton/keg-base:{{cli.settings.docker.defaultTag}}
 KEG_IMAGE_TAG={{ cli.settings.docker.defaultTag }}
 
 # Entry point to the keg-proxy for all services
